--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p>Support Kerala Blasters by changing your profile picture</p>
         <div id="preview">
           <div id="crop-area">
-            <img src="http://demos.subinsb.com/isl-profile-pic/image/person.png" id="profile-pic" />
+            <img src="https://demos.subinsb.com/isl-profile-pic/image/person.png" id="profile-pic" />
           </div>
           <img src="frames/frame-1.png" id="fg" data-design="0" />
         </div>
